RESOLVED FIXED76575
[chromium] Fix compile error from bug #76211
https://bugs.webkit.org/show_bug.cgi?id=76575
Summary [chromium] Fix compile error from bug #76211
Dana Jansens
Reported 2012-01-18 14:38:45 PST
[chromium] Fix compile from bug #76211
Attachments
Patch (930 bytes, patch)
2012-01-18 14:39 PST, Dana Jansens
no flags
Patch (1.67 KB, patch)
2012-01-18 14:41 PST, Dana Jansens
no flags
Dana Jansens
Comment 1 2012-01-18 14:39:26 PST
Dana Jansens
Comment 2 2012-01-18 14:41:04 PST
Created attachment 123000 [details] Patch Add changelog
James Robinson
Comment 3 2012-01-18 14:45:29 PST
Comment on attachment 123000 [details] Patch R=me. Will land by hand.
James Robinson
Comment 4 2012-01-18 14:50:08 PST
Comment on attachment 123000 [details] Patch Clearing flags on attachment: 123000 Committed r105328: <http://trac.webkit.org/changeset/105328>
James Robinson
Comment 5 2012-01-18 14:50:20 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.