[chromium] Fix compile error from bug #76211 https://bugs.webkit.org/show_bug.cgi?id=76575

Patch by Dana Jansens <danakj@chromium.org> on 2012-01-18
Reviewed by James Robinson.

No new tests. Fixing compile only.

* platform/graphics/chromium/ImageLayerChromium.cpp:
(WebCore::ImageLayerTextureUpdater::prepareToUpdate):

git-svn-id: svn://svn.chromium.org/blink/trunk@105328 bbb929c8-8fbe-4397-9dbb-9b2b20218538